[package]
name = "dotfiles-web"
version = "0.1.0"
authors = ["Kabir Kwatra <kabir@kwatra.me>"]
edition = "2018"
description = "Website for DotFiles"
repository = "https://github.com/KabirKwatra/dotfiles-web"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.3"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard", "MediaQueryList"] }
